vlib/v/checker/tests/array_map_arg_mismatch.vv
fn main() {
	a := [1, 2, 3]
	a.map()
	a.map(it * 2, 3)
}
